--- a/app/public/isu/css/isu.css
+++ b/app/public/isu/css/isu.css
@@ -249,3 +249,28 @@ body {
     background-color: white;
     color: black;
 }
+
+/* square buttons start */
+.btn-sq-lg {
+  width: 150px !important;
+  height: 150px !important;
+}
+
+.btn-sq {
+  width: 100px !important;
+  height: 100px !important;
+  font-size: 10px;
+}
+
+.btn-sq-sm {
+  width: 50px !important;
+  height: 50px !important;
+  font-size: 10px;
+}
+
+.btn-sq-xs {
+  width: 25px !important;
+  height: 25px !important;
+  padding:2px;
+}
+/* square buttons end */
