--- a/app/views/search/viewall.jade
+++ b/app/views/search/viewall.jade
@@ -18,9 +18,9 @@ block content
                     .row(style='margin-top:-15px') 
                         .col-xs-12.col-sm-10.col-md-8
                             .col-md-3
-                                input#datepicker.form-control(type='text', placeholder='Choose') 
+                                input#datepicker.form-control(type='text', placeholder='START DATE') 
                             .col-md-3
-                                input#datepicker2.form-control(type='text', placeholder='Choose')
+                                input#datepicker2.form-control(type='text', placeholder='END DATE')
                             .col-md-6  
                                 a.form-group.btn.btn-info.btn-select.btn-select-light
                                     input.btn-select-input(type='hidden', id='', name='search_gbn', value='')
