--- a/app/views/search/viewdetail.jade
+++ b/app/views/search/viewdetail.jade
@@ -1,7 +1,7 @@
 extends ../layouts/default
 block head
     link(href='//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css', rel='stylesheet', type='text/css')
-
+    //link(href='/isu/css/board_style.css', rel='stylesheet')
 block content
     .content
         .container
@@ -18,10 +18,10 @@ block content
                         .form-group
                             dl.topic
                                 dt
-                                span.wstate3 완료
+                                    span.wstate3 완료
                                 dd.ititle
-                                span
-                                    | [이수시스템] 메일 정리 후에도 쓰레기 데이터 남는 문제
+                                    a.span
+                                        | 전자전표시스템 결재프로세스 개선 요청
                 .row
                     .col-xs-12.col-sm-10.col-md-8
                         .panel.panel-default
@@ -35,20 +35,22 @@ block content
                                             | 박선우 | 2017-07-31 15:49
                             .panel-body
                                 p
-                                | 안녕하세요 
+                                | - 현재(변경전) : 한가지 결재조건 지정 가능 
                                 br
-                                | 이수시스템 박선우입니다. 
-                                br
-                                br
-                                | **내용 : 메일 삭제 후 용량 확보하였는데도, 90% 이상 찼다는 알림창 뜨는 문제
+                                | ① 그룹웨어 < 발신부서 < 수신부서(재경팀, 총무1과, 총무2과) 
                                 br
                                 br
-                                | 아래 두 개의 계정에서 발생하는 것으로 보입니다. 
                                 br
-                                | **계정 : 생관1(wendeng1@isu.co.kr) 박용익(yong63@isu.co.kr) 
+                                | - 개선(변경후) : 두가지 결재조건 지정 가능 
+                                br
+                                | ① 그룹웨어 < 발신부서 < 수신부서(재경팀, 총무1과, 총무2과) 
+                                br
+                                | : 현업에서 전표 발생 후 관리부서에 수신 
                                 br
                                 br
-                                | 확인 및 신속한 조치 부탁드립니다. 
+                                | ② 그룹웨어 < 수신부서(재경팀, 총무1과, 총무2과) 
+                                br
+                                | : 현업이 관리부서일 경우 처리방법(내부품의 형식)
                                 br
                                 br
                                 br
@@ -64,13 +66,13 @@ block content
                                 .panel-body
                                     p
                                     .irps
-                                    | 안녕하세요. ㈜나라비전 김성회입니다.
+                                    | 안녕하세요. 이수시스템 박선우입니다.
                                     br
                                     br
-                                    | 쓰레기 데이터 정리 완료하였습니다. 해당 계정 재로그인 바랍니다.
+                                    | 해당 요청건 처리완료하였습니다. 
                                     br
                                     br
-                                    | 추가 문의사항 발생 시, 고객센터로 문의 바랍니다. 감사합니다.
+                                    | 추가 문의사항 있으시면 연락주시기 바랍니다. 감사합니다.
                                     br
                                 .panel-footer
                                     .row
@@ -78,16 +80,18 @@ block content
                                             a.btn.btn-sq.btn-primary(href='#')
                                                 i.fa.fa-user.fa-5x
                                                 br
-                                                | Admin
+                                                | ISU
+                                                br
+                                                | SYSYEM
                                         .col-sm-10
                                             p.iaction
                                                 | 담당자
                                             p.iposition
-                                                strong 서비스사업부 | 
-                                                strong 김성회 
+                                                strong 전략사업팀 | 
+                                                strong 박선우 
                                                 span 대리
                                             p.iemail
-                                                | hwahwoi4@nara.co.kr
+                                                | psw@isu.co.kr
 
                         .panel.panel-default
                                 .panel-heading
@@ -98,7 +102,7 @@ block content
                                     .vc_cont
                                     .icont_text
                                         strong 조치내역에 대해 만족도
-                                        span.gt_base >
+                                        span.gt_base > 
                                         | 매우 만족
                                         p.con_bar
                                         strong 불편사항 및 개선사항
