--- a/app/views/search/viewdetail.jade
+++ b/app/views/search/viewdetail.jade
@@ -30,7 +30,7 @@ block content
                                     .col-sm-8
                                         h4
                                             | 접수내용
-                                    .col-sm-4
+                                    .col-sm-4.text-right
                                         span
                                             | 박선우 | 2017-07-31 15:49
                             .panel-body
@@ -60,7 +60,7 @@ block content
                                         .col-sm-8
                                             h4
                                                 | 조치사항
-                                        .col-sm-4
+                                        .col-sm-4.text-right
                                             span
                                                 | 2017-07-31 16:02
                                 .panel-body
