--- a/app/views/search/viewall.jade
+++ b/app/views/search/viewall.jade
@@ -40,6 +40,9 @@ block content
                                 dl.topic
                                     dt
                                         span.wstate3 완료
+                                br
+                                dl.date     
+                                2017-07-19
                             .col-md-8
                                 dd
                                     ol
