--- a/app/views/index2.jade
+++ b/app/views/index2.jade
@@ -7,7 +7,7 @@ html
         meta(name='google-site-verification', content='8dL8-JtafRwPb9mqiolYLGX-gJQ6iWrzWrHkZRnE2Uo')
         link(rel='stylesheet', href='/vendor/bootstrap-3.3.7/css/bootstrap.min.css')
         link(rel='stylesheet', href='/vendor/bootstrap-3.3.7/css/bootstrap-theme.min.css')
-        link(rel='stylesheet', href='/isu/css/login.css')
+        link(rel='stylesheet', href='/isu/css/login2.css')
         script(src='/vendor/jquery/jquery.js')
         script(src='/vendor/bootstrap-3.3.7/js/bootstrap.min.js')
         script(src='/isu/js/index.js')
