# LHI 메인 nav 이수로고 제거

--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -33,7 +33,7 @@ html
             .container
                 .navbar-header
                     a.navbar-brand(href='/')
-                        img.navbar-logo(src='/isu/image/logonew.gif', alt='Logo')
+                        //img.navbar-logo(src='/isu/image/logonew.gif', alt='Logo')
                         // img(src='/isu/image/logonew.gif', alt='Logo')
                         span.navbar-brand-label
                     button.navbar-toggle.collapsed(data-toggle='collapse', data-target='.my-navbar-collapse')
