--- a/app/views/incident/new.jade
+++ b/app/views/incident/new.jade
@@ -58,5 +58,5 @@ block content
                     .row 
                         .col-xs-12.col-sm-10.col-md-8
                                 .form-group
-                                input#attach-file.file(name='incident[attach-file]', type='file', multiple='') 
+                                input#attach-file.file(name='incident[attach-file]', type='file', data-upload-url="#", multiple='') 
 
