--- a/app/views/search/viewall.jade
+++ b/app/views/search/viewall.jade
@@ -1,6 +1,6 @@
 extends ../layouts/default
 block head
-    link(href='/isu/css/board_style.css', rel='stylesheet')
+    //link(href='/isu/css/board_style.css', rel='stylesheet')
     script(src='/isu/js/incident/index.js', type='text/javascript')
     script(src='/isu/js/search/datepicker.js' type='text/javascript')
     script(src='https://code.jquery.com/ui/1.12.1/jquery-ui.js')
