--- a/app/views/search/viewall.jade
+++ b/app/views/search/viewall.jade
@@ -38,11 +38,12 @@ block content
                         .col-xs-12.col-sm-10.col-md-8 
                             .col-md-2(style='margin-top:25px')
                                 dl.topic
-                                    dt
+                                    dt(style='margin-left:15px')
                                         span.wstate3 완료
-                                br
-                                dl.date     
-                                2017-07-19
+                                    br
+                                    br
+                                    br 
+                                    span 2017-07-29
                             .col-md-8
                                 dd
                                     ol
@@ -73,7 +74,7 @@ block content
                         .col-xs-12.col-sm-10.col-md-8 
                             .col-md-2(style='margin-top:25px')
                                 dl.topic
-                                    dt
+                                    dt(style='margin-left:15px')
                                         span.wstate2 진행
                             .col-md-8
                                 dd
@@ -101,7 +102,7 @@ block content
                         .col-xs-12.col-sm-10.col-md-8 
                             .col-md-2(style='margin-top:25px')
                                 dl.topic
-                                    dt
+                                    dt(style='margin-left:15px')
                                         span.wstate1 보류
                             .col-md-8
                                 dd
