--- a/app/views/usermanage/new.jade
+++ b/app/views/usermanage/new.jade
@@ -43,7 +43,7 @@ block content
                                     input.form-control.input-lg(name='usermanage[callNo]' type='text' placeholder='회사전화번호' value='')
                                 .form-group
                                     label 사용자권한구분
-                                    select.form-control.input-lg(name='usermanage[userFlag]')
+                                    select.form-control.input-lg(name='usermanage[userFlag]' selected='#{usermanage.userFlag}' onchange='alert(1);')
                                         option(value='') 
                                         option(value='1') 그룹관리자 
                                         option(value='2') 회사관리자
@@ -52,7 +52,7 @@ block content
                                         option(value='9') 일반사용자
                                 .form-group
                                     label 그룹사권한구분
-                                    select.form-control.input-lg(name='usermanage[groupFlag]')
+                                    select.form-control.input-lg(name='usermanage[groupFlag]' selected='#{usermanage.groupFlag}')
                                         option(value='') 
                                         option(value='out') 외부사용자 
                                         option(value='in') 내부사용자
