--- a/app/views/company/new.jade
+++ b/app/views/company/new.jade
@@ -36,11 +36,11 @@ block head
                         }
 
                         // 우편번호와 주소 정보를 해당 필드에 넣는다.
-                        $('input[name=zip_cd]').val(data.zonecode);
-                        $('input[name=addr]').val(fullAddr);
+                        $('#zip_cd').val(data.zonecode);
+                        $('#addr').val(fullAddr);
                         
                         // 커서를 상세주소 필드로 이동한다.
-                        $('input[name=addr2]').focus();
+                        $('#addr2').focus();
                     }
                 }).open();
             }); 
@@ -126,16 +126,16 @@ block content
                     .row(style='margin-left:30px')
                         .col-xs-3.col-sm-3.col-md-3
                             .form-group
-                                input.form-control.input-sm(type='text', name='zip_cd', placeholder='우편번호')
+                                input.form-control.input-sm(type='text', id='zip_cd' name='company[zip_cd]', placeholder='우편번호')
                     .row(style='margin-left:30px')
                         .col-xs-6.col-sm-6.col-md-6
                             .form-group
-                                input.form-control.input-sm(type='text', name='addr', placeholder='회사주소1' readonly)
+                                input.form-control.input-sm(type='text', id='addr' name='company[addr]', placeholder='회사주소1' readonly)
                                 span.btn.btn-sm.btn-primary(style='margin-top:10px', id='postcode' onclick='setDaumPostcode()') 우편번호 찾기
                     .row(style='margin-left:30px')
                         .col-xs-6.col-sm-6.col-md-6
                             .form-group
-                                input.form-control.input-sm(type='text', name='addr2', placeholder='회사주소2')
+                                input.form-control.input-sm(type='text', id='addr2' name='company[addr2]', placeholder='회사주소2')
                     .row(style='margin-left:30px')
                         .col-xs-6.col-sm-6.col-md-6
                             .form-group
