--- a/app/views/usermanage/edit.jade
+++ b/app/views/usermanage/edit.jade
@@ -3,7 +3,7 @@ block head
     script(type='text/javascript').
         $(document).ready(function() { 
             $('#userFlag').val('#{usermanage.userFlag}');
-            $('#groupFlag').val('#{usermanage.groupFlag}');   
+            $('#groupFlag').val('#{usermanage.groupFlag}');
         });
 
 block content
@@ -50,7 +50,7 @@ block content
                             input.form-control.input-lg(name='usermanage[callNo]' type='text' placeholder='회사전화번호' value='#{usermanage.callNo}')
                         .form-group
                             label 사용자권한구분
-                            select.form-control.input-lg(id='userFlag' name='userFlag' value='#{usermanage.userFlag}')
+                            select.form-control.input-lg(id='userFlag' name='usermanage[userFlag]' type='text' value='#{usermanage.userFlag}')
                                 option(value='1') 그룹관리자 
                                 option(value='2') 회사관리자
                                 option(value='3') 업무관리자
@@ -58,6 +58,6 @@ block content
                                 option(value='9') 일반사용자
                         .form-group
                             label 그룹사권한구분
-                            select.form-control.input-lg(id='groupFlag' name='groupFlag' value='#{usermanage.groupFlag}')
+                            select.form-control.input-lg(id='groupFlag' name='usermanage[groupFlag]' type='text' value='#{usermanage.groupFlag}')
                                 option(value='out') 외부사용자 
                                 option(value='in') 내부사용자
