--- a/app/views/company/edit.jade
+++ b/app/views/company/edit.jade
@@ -46,7 +46,7 @@ block content
                 .row(style='margin-left:30px')
                     .col-xs-6.col-sm-6.col-md-6
                         .form-group
-                            input.form-control.input-sm(type='text', id='addr' name='company[addr]', value='#{company.addr}',placeholder='회사주소1')
+                            input.form-control.input-sm(type='text', id='addr' name='company[addr]', value='#{company.addr}',placeholder='회사주소1' readonly)
                             span.btn.btn-sm.btn-primary(style='margin-top:10px', id='postcode' onclick='setDaumPostcode()') 우편번호 찾기
                 .row(style='margin-left:30px')
                     .col-xs-6.col-sm-6.col-md-6
