--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -20,16 +20,24 @@ html
         script(src='/vendor/raphael/raphael.min.js')
         script(src='/vendor/metisMenu/metisMenu.min.js')
         script(src='/vendor/morrisjs/morris.min.js')
+        script(src='http://dmaps.daum.net/map_js_init/postcode.v2.js')
 
         //추후 삭제(도표 표시용)
         script(src='/data/morris-data.js')
         script(src='/data/flot-data.js')
         script(src='/isu/js/test.js')
+        script(src='/isu/js/postcode.js')
+        script(src='../../controllers/login.js')
 
         block head
+        script(type='text/javascript').
+            $(document).ready(function() { 
+                console.log("123456789"); 
+            });
+
 
     body
-        - if(true){ //외부사용자
+        - if(userFlag==1){ //내부사용자
         .navbar.navbar-default.navbar-top
             .container
                 .navbar-header
@@ -62,7 +70,37 @@ html
                             a(href='/logout')
                                 i.fa.fa-user
                                 |  로그아웃
+        -}else if(userFlag==3){ //테스트
+        .navbar.navbar-default.navbar-top
+            .container
+                .navbar-header
+                    a.navbar-brand(href='/')
+                        //img.navbar-logo(src='/isu/image/logonew.gif', alt='Logo')
+                        // img(src='/isu/image/logonew.gif', alt='Logo')
+                        span.navbar-brand-label
+                    button.navbar-toggle.collapsed(data-toggle='collapse', data-target='.my-navbar-collapse')
+                        span.icon-bar
+                        span.icon-bar
+                        span.icon-bar
+                .navbar-collapse.my-navbar-collapse.collapse
+                    ul.nav.navbar-nav
+                        li
+                            a(href='/index') Home
+                        li
+                            a(href='/account/') FAQ
+                        li
+                            a(href='/question/new') 문의하기
+                        li
+                            a(href='/question/') 처리진행현황
+                        li
+                            a(href='/account/') 자주묻는질문과답
+                    ul.nav.navbar-nav.navbar-right
+                        li
+                            a(href='/logout')
+                                i.fa.fa-user
+                                |  로그아웃
         -}
+        //-if(groupFlag!="out"){
         .page
             .container
                 #wrapper
@@ -152,6 +190,7 @@ html
                                         i.fa.fa-th-list.fa-fw
                                         |  SD Dashboard
                                         span.fa.arrow
+
                     #page-wrapper
                             block content
         block feet
