--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -25,13 +25,13 @@ html
         //추후 삭제(도표 표시용)
         script(src='/data/morris-data.js')
         script(src='/data/flot-data.js')
-        script(src='/isu/js/test.js')
         script(src='/isu/js/postcode.js')
+        script(src='/util/session.js')
 
         block head
         
     body
-        - if(userFlag==1){ //내부사용자
+        - if(true){ //모든사용자
         .navbar.navbar-default.navbar-top
             .container
                 .navbar-header
@@ -48,41 +48,6 @@ html
                         li
                             a(href='/index') Home
                         li
-                            a(href='/account/') FAQ
-                        li
-                            a(href='/question/new') 문의하기
-                        li
-                            a(href='/question/') 처리진행현황
-                        li
-                            a(href='/account/') 자주묻는질문과답
-                        li
-                            a(href='/register/') 계정등록
-                        li
-                            a(href='/manage/company') 회사정보관리
-                    ul.nav.navbar-nav.navbar-right
-                        li
-                            a(href='/logout')
-                                i.fa.fa-user
-                                |  로그아웃
-        -}else if(userFlag==3){ //테스트
-        .navbar.navbar-default.navbar-top
-            .container
-                .navbar-header
-                    a.navbar-brand(href='/')
-                        //img.navbar-logo(src='/isu/image/logonew.gif', alt='Logo')
-                        // img(src='/isu/image/logonew.gif', alt='Logo')
-                        span.navbar-brand-label
-                    button.navbar-toggle.collapsed(data-toggle='collapse', data-target='.my-navbar-collapse')
-                        span.icon-bar
-                        span.icon-bar
-                        span.icon-bar
-                .navbar-collapse.my-navbar-collapse.collapse
-                    ul.nav.navbar-nav
-                        li
-                            a(href='/index') Home
-                        li
-                            a(href='/account/') FAQ
-                        li
                             a(href='/question/new') 문의하기
                         li
                             a(href='/question/') 처리진행현황
@@ -93,10 +58,11 @@ html
                             a(href='/logout')
                                 i.fa.fa-user
                                 |  로그아웃
-        -}
-        //-if(groupFlag!="out"){
+        - }
+        
         .page
             .container
+                - if(groupFlag =="in"){
                 #wrapper
                     .sidebar.visible-lg(role='navigation', style='margin-top: 0')
                         .sidebar-nav.navbar-collapse
@@ -110,7 +76,7 @@ html
                                 li
                                     a(href='/index')
                                         i.fa.fa-desktop.fa-fw
-                                        |  HOME
+                                        |  HOME   
                                 li.active
                                     a(href='#')
                                         i.fa.fa-th-list.fa-fw
@@ -125,6 +91,8 @@ html
                                             a(href='#') 자주묻는질문과답
                                         li
                                             a(href='/search/viewall') 처리된내용검색
+                                //그룹관리자, 업무관리자,업무담당자 오픈
+                                - if(userFlag ==1 || userFlag ==3 || userFlag ==4){    
                                 li.active
                                     a(href='#')
                                         i.fa.fa-th-list.fa-fw
@@ -139,6 +107,8 @@ html
                                             a(href='#') 나의업무지정
                                         li
                                             a(href='#') 월별처리내역
+                                - }
+                                - if(userFlag !=9){
                                 li
                                     a(href='#')
                                         i.fa.fa-th-list.fa-fw
@@ -157,6 +127,8 @@ html
                                             a(href='#') 담당자별월별처리내역
                                         li
                                             a(href='#') 처리구분별처리내역
+                                - }
+                                - if(userFlag ==1 || userFlag ==4){
                                 li
                                     a(href='#')
                                         i.fa.fa-th-list.fa-fw
@@ -179,12 +151,15 @@ html
                                             a(href='#') 업무별담당자현황
                                         li
                                             a(href='#') 자주묻는질문과답
+                                - }
+                                - if(userFlag ==1){            
                                 li
                                     a(href='#')
                                         i.fa.fa-th-list.fa-fw
                                         |  SD Dashboard
-                                        span.fa.arrow
-
+                                        span.fa.arrow 
+                                -}
+                - }       
                     #page-wrapper
                             block content
         block feet
