--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -26,7 +26,7 @@ html
         script(src='/data/morris-data.js')
         script(src='/data/flot-data.js')
         script(src='/isu/js/postcode.js')
-        script(src='/util/session.js')
+        //script(src='../../util/session.js')
 
         block head
         
@@ -55,6 +55,10 @@ html
                             a(href='/account/') 자주묻는질문과답
                     ul.nav.navbar-nav.navbar-right
                         li
+                            a(href='#')
+                                #{userNm}
+                                | 님
+                        li
                             a(href='/logout')
                                 i.fa.fa-user
                                 |  로그아웃
@@ -62,7 +66,7 @@ html
         
         .page
             .container
-                - if(groupFlag =="in"){
+                - if(groupFlag =="in" && userFlag != null){
                 #wrapper
                     .sidebar.visible-lg(role='navigation', style='margin-top: 0')
                         .sidebar-nav.navbar-collapse
@@ -91,6 +95,7 @@ html
                                             a(href='#') 자주묻는질문과답
                                         li
                                             a(href='/search/viewall') 처리된내용검색
+
                                 //그룹관리자, 업무관리자,업무담당자 오픈
                                 - if(userFlag ==1 || userFlag ==3 || userFlag ==4){    
                                 li.active
