#PSW COMMIT - 엑셀다운로드 수정

--- a/app/views/company/list.jade
+++ b/app/views/company/list.jade
@@ -36,8 +36,8 @@ block content
                     hr.colorgraph      
             br
             .row(style='margin-left:30px;margin-top:-15px')
-                a.button.btn.btn-primary.btn-sm(href='/company/new') 추가
-                a.button.btn.btn-primary.btn-sm(id='btnExport') ExcelDownload
+                button.btn.btn-primary.btn-sm(href='/company/new') 추가      
+                button.btn.btn-primary.btn-sm.btn-info(id='btnExport') ExcelDownload
             br         
             .row
                 .col-xs-12.col-sm-10.col-md-8       
