--- a/app/views/incident/new.jade
+++ b/app/views/incident/new.jade
@@ -24,7 +24,7 @@ block content
                 
                 .row(style='margin-top:20px')
                     .col-xs-12.col-sm-10.col-md-8
-                        h3.masthead-brand 서비스요청
+                        h3.masthead-brand #{title}
                         hr.colorgraph
                 form.form.col-md-12.center-block(name='form' action='' method='post' enctype="multipart/form-data")        
                     .row(style='margin-top:-15px')
