--- a/app/views/company/list.jade
+++ b/app/views/company/list.jade
@@ -31,22 +31,34 @@ block head
                     }  
                     return (sa);
                 }
+                
+                function fnJsonToExcel(JsonData){
+                    alert("call fnJsonToExcel");
+                    alert("JSONTOEXCEL 함수 : "+JsonData);
 
-                function fnJsonToExcel(data){
-                    var tab_text="<table border='2px'><tr bgcolor='#87AFC6'>";
-                    var textRange; var j=0;
-                    tab = data; // id of table
-                    
-                    for(j = 0 ; j < tab.rows.length ; j++) {     
-                        tab_text=tab_text+tab.rows[j].innerHTML+"</tr>";
-                        //tab_text=tab_text+"</tr>";
+                    var arrData = typeof JsonData != 'object' ? JSON.parse(JsonData) : JsonData;
+                    var tab_text = '';
+
+                    var row = "";
+                    for (var index in arrData[0]) {
+                        row += index + ',';
                     }
+                    row = row.slice(0, -1);
+                    tab_text += row + '\r\n';
 
-                    tab_text=tab_text+"</table>";
-                    tab_text= tab_text.replace(/<A[^>]*>|<\/A>/g, "");//remove if u want links in your table
-                    tab_text= tab_text.replace(/<img[^>]*>/gi,""); // remove if u want images in your table
-                    tab_text= tab_text.replace(/<input[^>]*>|<\/input>/gi, ""); // reomves input params
-
+                    for (var i = 0; i < arrData.length; i++) {
+                        var row = "";
+                        for (var index in arrData[i]) {
+                            row += '"' + arrData[i][index] + '",';
+                        }
+                        row.slice(0, row.length - 1);
+                        tab_text += row + '\r\n';
+                    }
+                    
+                    if (tab_text == '') {
+                        alert("Invalid data");
+                        return;
+                    }
                     var ua = window.navigator.userAgent;
                     var msie = ua.indexOf("MSIE "); 
 
@@ -61,18 +73,39 @@ block head
                     }  
                     return (sa);
                 }
-
+                
+                function getJsonData(){
+                    $.ajax({
+                        type: "GET",
+                        url: "/company/exceldownload",
+                        contentType: "application/json",
+                        data: JSON.stringify({}),
+                        dataType: "json",
+                        success: function(data, status){
+                            console.log(data);
+                            fnJsonToExcel(JSON.stringify(data));
+                            //fnJsonToExcel(data);
+                        },
+                        error: function(data, status, err) {
+                            console.log("err : "+err);
+                            return;
+                        }
+                    });
+                }
 block content
     .content
         .container
+            p
+            | #{JsonData}
             .row(style='margin-top:20px')
                 .col-xs-12.col-sm-10.col-md-8
                     h3.masthead-brand 회사정보 > 목록
                     hr.colorgraph      
             br
             .row(style='margin-left:30px;margin-top:-15px')
-                button.btn.btn-primary.btn-sm(href='/company/new') 추가      
+                a.button.btn.btn-primary.btn-sm(href='/company/new') 추가      
                 button.btn.btn-primary.btn-sm.btn-info(id='btnExport' onclick="fnTableToExcel(document.getElementById('dvData'));") ExcelDownload
+                a.button.btn.btn-primary.btn-sm.btn-info(onclick="getJsonData();") JsonDataDownload
             br         
             .row
                 .col-xs-12.col-sm-10.col-md-8       
