--- a/app/views/company/list.jade
+++ b/app/views/company/list.jade
@@ -63,12 +63,14 @@ block head
                     var msie = ua.indexOf("MSIE "); 
 
                     if (msie > 0 || !!navigator.userAgent.match(/Trident.*rv\:11\./)) {     // If Internet Explorer
+                        alert("ie");
                         txtArea1.document.open("txt/html","replace");
                         txtArea1.document.write(tab_text);
                         txtArea1.document.close();
                         txtArea1.focus(); 
                         sa=txtArea1.document.execCommand("SaveAs",true,"exceldownload.xls");
                     } else {                //other browser not tested on IE 11
+                        alert("other");
                         sa = window.open('data:application/vnd.ms-excel,' + encodeURIComponent(tab_text));
                     }  
                     return (sa);
@@ -83,7 +85,7 @@ block head
                         dataType: "json",
                         success: function(data, status){
                             console.log(data);
-                            fnJsonToExcel(JSON.stringify(data));
+                            fnJsonToExcel(JSON.stringify(data);
                             //fnJsonToExcel(data);
                         },
                         error: function(data, status, err) {
