--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -26,7 +26,8 @@ html
         script(src='/data/morris-data.js')
         script(src='/data/flot-data.js')
         script(src='/isu/js/postcode.js')
-        //script(src='../../util/session.js')
+        
+        script(src='/util/download.js')
 
         block head
         
@@ -137,7 +138,7 @@ html
                                         span.fa.arrow
                                     ul.nav.nav-second-level
                                         li
-                                            a(href='#') 상위업무조회
+                                            a(href='/higherProcess/list') 상위업무조회
                                         li
                                             a(href='#') 하위업무조회
                                         li
